--- a/src/components/shared/Button.css
+++ b/src/components/shared/Button.css
@@ -1,7 +1,8 @@
 .shared__btn {
   background-color: var(--btn-default-color);
-  border: 1px solid var(--header-tx-color);
-  border-top: 0;
+  border: none;
+  border-left: 1px solid white;
+  border-right: 1px solid white;
   color: white;
   margin: 0;
   padding: 0.8em 0.8em;
